# capstone-2024-13

./: LICENSE  Makefile  README.md  index.md  package.json
capstone-origin/: README.md  (+1 more)
src/service/mystic/: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
src/service/mystic/app/: server.py
src/service/mystic/app/captioning/: __init__.py
src/service/mystic/app/chain/base/: __init__.py  test.ipynb
src/service/mystic/app/chain/v1/: __init__.py
src/service/mystic/app/chain/v2/: __init__.py
src/service/mystic/app/chain/v3/: __init__.py
src/service/mystic/app/connection/: __init__.py
src/service/mystic/app/greeneye/: __init__.py
src/service/mystic/app/router/llm/: __init__.py  chat.py  connect.py  disconnect.py
src/service/mystic/app/router/stt/: __init__.py
src/service/mystic/app/router/tts/: __init__.py
src/service/mystic/app/stt/: __init__.py
src/service/mystic/app/tts/: __init__.py
src/service/mystic/app/tts/joo/: __init__.py
src/service/mystic/app/tts/shin/: __init__.py
src/service/mystic/app/util/: __init__.py
src/service/mystic/app/util/image_captioning/: __init__.py
src/service/mystic/app/util/yaml_parser/: __init__.py
src/service/mystic/chain/v3/: __init__.py
src/service/mystic/model/tts/: __init__.py
src/service/mystic/model/tts/basic/: __init__.py
src/service/mystic/model/tts/lee/: __init__.py
src/service/mystic/model/tts/park/: __init__.py
src/service/mystic/src/app/: server.py
src/service/mystic/src/app/router/greeneye/: __init__.py
src/service/mystic/src/app/router/llm/: __init__.py  chat.py  connect.py  disconnect.py  image.py
src/service/mystic/src/app/router/stt/: __init__.py
src/service/mystic/src/app/router/tts/: __init__.py
src/service/mystic/src/app/util/: __init__.py
src/service/mystic/src/chain/base/: __init__.py
src/service/mystic/src/chain/v1/: __init__.py
src/service/mystic/src/chain/v2/: __init__.py
src/service/mystic/src/chain/v3/: __init__.py
src/service/mystic/src/model/: .gitignore
src/service/mystic/src/model/llm/: README.md
src/service/mystic/src/model/stt/: README.md  __init__.py
src/service/mystic/src/model/tts/: README.md  __init__.py
src/service/mystic/src/template/: README.md  character.xml  character.yml  character_first.yml  default.yml  diary.xml  meta.xml  meta_none.xml
src/service/mystic/template/: character.yml  default.yml  questions.yml
src/service/mystic/tool/: docker-entrypoint.sh
(+472 files in other folders)
